[package]
name = "conan2"
version = "0.1.1"
description = "Pulls the C/C++ library linking flags from Conan dependencies"
authors = ["Sergey Kvachonok <ravenexp@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/ravenexp/conan2-rs"
keywords = ["ffi", "conan", "build"]
categories = ["development-tools::build-utils", "development-tools::ffi"]
readme = "README.md"

[dependencies]
serde_json = "1.0"

[workspace]
members = [ "example-build-script" ]
